2007-12-17  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/IMemberDefinition.cs: make IMemberDefinition
	implement ICustomAttributeProvider.

2007-12-15  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Binary/AggressiveReflectionReader.cs: protect
	against zeroed tokens.

2007-12-15  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Binary/ImageReader.cs: fix crash when reading
	some non .net binaries.

2007-11-22  Sebastien Pouliot  <sebastien@ximian.com>

	* Mono.Cecil/SecurityDeclarationReader.cs:	Change default read
	value to true. Fix reading 2.0 security	declaration format used by
	MS compilers (#343553).

2007-11-15	Rodrigo B. de Oliveira <rodrigobamboo@gmail.com>

	* Mono.Cecil.Cil/MethodBody.cs:
		Fixed Optimize for ldc_i4

2007-11-15	Rodrigo B. de Oliveira <rodrigobamboo@gmail.com>

	* Mono.Cecil.Cil/DocumentLanguage.cs
	  Mono.Cecil.Cil/DocumentLanguageVendor.cs:
	  	Compact Framework support by using Guid(string) if CF_2_0 is defined

2007-11-01  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/MethodReturnType.cs: based on a patch by
	Ivan <ivanjh@gmail.com>. Fix for cloning methods with
	marshalers on return type.

2007-10-31  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Binary/ImageReader.cs: fix for the case where
	the export table export zero functions.

2007-10-18  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Cil/MethodBody.cs: Add an Optimize method which
	is the opposite of Simplify. Based on a patch by Carlo.

	* Mono.Cecil.Cil/CodeWriter.cs: don't care about reducing MaxStack.

2007-10-11  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/TypeReference.cs: add a IsNested helper property.

	* Mono.Cecil/ReflectionWriter.cs
	  Mono.Cecil.Signatures/SignatureWriter.cs:
		Integrate patch for Carlo, start working on enum writing
		in custom attribute.

2007-10-09  Nestor Salceda  <nestor.salceda@gmail.com>

	* mono-cecil.pc.in:  Updated the version number.

2007-10-09  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Cil/Instruction.cs